--- a/index.html
+++ b/index.html
@@ -10,12 +10,10 @@
 </head>
 <body>
     <div class="greetings">
-    <!-- silahkan menambah kata sesuai keinginan dengan <span>text...</span -->
-        <span>こ</span>
-        <span>ん</span>
-        <span>に</span>
-        <span>ち</span>
-        <span>は</span>
+        <span>haaii</span>
+        <span>callista</span>
+        <span>yang</span>
+        <span>kiyutt</span
     </div>
     <div class="description">
      
